--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>BitCoder</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <div class="home">
       <h1>BitCoder</h1>
       <div class="links">
-        <a>Log In</a>
-        <a>Sign Up</a>
+        <a href="/login">Log In</a>
+        <a href="/register">Sign Up</a>
       </div>
     </div>
     <div class="large_text">
